syntax="proto3";

package challenge;

option go_package="/challenge";

import "google/api/annotations.proto";

service TestApi {
    rpc Echo(TestResponse) returns (TestResponse) {
        option (google.api.http) = {
            post: "/echo"
            body: "*"
        };
    }
    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/login"
            body: "*"
        };
    }

    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/create_user"
            body: "*"
        };
    }
}

message TestResponse {
    int32 id = 1;
    string msg = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string sessionId = 1;
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
}

message CreateUserResponse {
    int32 userId = 1;
}